@@ -227,8 +227,8 @@ avatarsay.o: ../avatarsay.c ../akfavatar.h
 	$(CC) $(CFLAGS) $(SDLCFLAGS) -c -o $@ ../avatarsay.c
 
 # from this directory!
-avtmsg.o: avtmsg.c ../avtmsg.h
-	$(CC) $(CFLAGS) $(SDLCFLAGS) -c -I.. -o $@ avtmsg.c
+avtmsg.o: avtmsg.c avtmsg.h
+	$(CC) $(CFLAGS) $(SDLCFLAGS) -c -o $@ avtmsg.c
 
 arch.o: ../arch.c ../arch.h
 	$(CC) $(CFLAGS) -c -o $@ ../arch.c
