@@ -2,6 +2,9 @@
  * avtmsg - message output for avatarsay for windows
  * Copyright (c) 2007, 2008 Andreas K. Foerster <info@akfoerster.de>
  *
+ * stdout/stderr are broken in Windows GUI programs,
+ * that is the only reason why I fall back to the Windows API
+ *
  * This file is part of AKFAvatar
  *
  * AKFAvatar is free software; you can redistribute it and/or modify
@@ -18,12 +21,19 @@
  * along with this program; if not, see <http://www.gnu.org/licenses/>.
  */
 
-/* $Id: avtmsg.c,v 2.1 2008-12-02 10:58:12 akf Exp $ */
+/* $Id: avtmsg.c,v 2.2 2008-12-02 11:31:29 akf Exp $ */
 
 #include "avtmsg.h"
 #include <windows.h>
 #include <string.h>
 #include <stdlib.h>
+
+void
+info_msg (const char *msg)
+{
+  MessageBox (GetActiveWindow (), msg, PRGNAME,
+	      MB_OK | MB_ICONINFORMATION | MB_SETFOREGROUND);
+}
 
 void
 warning_msg (const char *msg1, const char *msg2)
